# tusdatos

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
compose/dev/: Dockerfile  start
compose/test/: Dockerfile
migrations/: env.py
migrations/versions/: a30431e13b6d_create_user_model.py
tests/: conftest.py
tests/api/: test_healthcheck.py
tests/services/: test_create_user.py  test_judicial_process_scraper.py
tusdatos/: main.py
tusdatos/core/: auth_handler.py  database.py  settings.py
tusdatos/core/models/: __init__.py  database.py  user.py
tusdatos/core/schemas/: __init__.py  auth.py  trails.py  trials.py
tusdatos/routers/: __init__.py  auth.py  healthcheck.py  judicial_processes.py
tusdatos/schemas/: __init__.py  trails.py
tusdatos/services/: judicial_processes.py  judicial_processes_scraper.py  run.py  scraper.py  users.py
tusdatos/utils/: __init__.py  sanitize_text.py
