[tool.poetry]
name = "tusdatos"
version = "0.1.0"
description = "Technical test for the position of backend developer for tusdatos.co"
authors = ["Gabriel Morales <dev@darklock.maskmy.id>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
httpx= "0.27.0"
motor = "3.3.2"
pydantic = "2.6.3"
pydantic-settings = "2.2.1"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.28.0"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
sqlalchemy = {extras = ["asyncio"], version = "2.0.28"}
asyncpg = "0.29.0"
alembic = "1.13.1"
python-multipart = "0.0.9"

[tool.poetry.group.dev.dependencies]
ipython = "8.22.2"
jedi-language-server = "0.41.2"
ruff-lsp = "0.0.52"

[tool.poetry.group.test.dependencies]
pytest = "7.4.4"
pytest-xdist = "3.5.0"
pytest-asyncio = "^0.23.6"

[tool.pytest.ini_options]
addopts = "-vv --last-failed --exitfirst --disable-warnings"
migrations= false
minversion = "7.4.4"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true
